// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ProductDetails /> should not render product details 1`] = `
<Fragment>
  <div
    className="breadcrumbs"
  >
    <div
      className="container"
    >
      <ul
        className="list-unstyled"
      >
        <li>
          <Link
            replace={false}
            to="/products"
          >
            Books
          </Link>
          <FontAwesomeIcon
            border={false}
            className=""
            fixedWidth={false}
            flip={null}
            icon="angle-right"
            inverse={false}
            listItem={false}
            mask={null}
            pull={null}
            pulse={false}
            rotation={null}
            size={null}
            spin={false}
            symbol={false}
            title=""
            transform={null}
          />
        </li>
        <li>
          <span>
            category 1
          </span>
        </li>
      </ul>
    </div>
  </div>
  <div
    className="product-details"
  >
    <div
      className="container"
    >
      <Loader />
    </div>
  </div>
</Fragment>
`;

exports[`<ProductDetails /> should render product details 1`] = `
<Fragment>
  <div
    className="breadcrumbs"
  >
    <div
      className="container"
    >
      <ul
        className="list-unstyled"
      >
        <li>
          <Link
            replace={false}
            to="/products"
          >
            Books
          </Link>
          <FontAwesomeIcon
            border={false}
            className=""
            fixedWidth={false}
            flip={null}
            icon="angle-right"
            inverse={false}
            listItem={false}
            mask={null}
            pull={null}
            pulse={false}
            rotation={null}
            size={null}
            spin={false}
            symbol={false}
            title=""
            transform={null}
          />
        </li>
        <li>
          <span>
            category 1
          </span>
        </li>
      </ul>
    </div>
  </div>
  <div
    className="product-details"
  >
    <div
      className="container"
    >
      <h1>
        test name 1
      </h1>
      <small
        className="product-details__author"
      >
        by 
      </small>
      <div
        className="row"
      >
        <div
          className="col-4"
        >
          <img
            alt="test name 1"
            className="img-fluid"
            src="src/1.img"
          />
        </div>
        <div
          className="col-8"
        >
          <div
            className="row "
          >
            <div
              className="col-sm-4"
            >
              <div
                className="product-details__price"
              >
                <strong>
                  1$$
                </strong>
              </div>
            </div>
            <div
              className="col-sm-4 ml-auto"
            >
              <input
                className="form-control"
                defaultValue={1}
                type="number"
              />
              <ProductActions />
            </div>
          </div>
          <h3>
            Description
          </h3>
          <p />
        </div>
      </div>
    </div>
  </div>
</Fragment>
`;
